Added modal form and button, still some bugs to resolve

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <meta charset="UTF-8">
 <title>Project-Library</title>
 <meta name="viewport" content="width=device-width,initial-scale=1">
-<link rel="style.css" href="">
+<link rel="stylesheet" href="style.css">
 <style>
 </style>
 <script src="script.js"></script>
@@ -11,8 +11,19 @@
 
 <div>
  <h1>This is a Heading</h1>
- <p>This is a paragraph.</p>
- <p>This is another paragraph.</p>
+ 
+</div>
+
+<!-- Trigger/Open The Modal -->
+<button id="myBtn">Open Modal</button>
+
+<!-- The Modal -->
+<div id="myModal" class="modal">
+  <!-- Modal content -->
+  <div class="modal-content">
+    <span class="close">&times;</span>
+    <p>Some text in the Modal..</p>
+  </div>
 </div>
 
 </body>
