Moved script to bottom of html body to remove errors.

--- a/index.html
+++ b/index.html
@@ -4,18 +4,12 @@
 <title>Project-Library</title>
 <meta name="viewport" content="width=device-width,initial-scale=1">
 <link rel="stylesheet" href="style.css">
-<style>
-</style>
-<script src="script.js"></script>
+
+
 <body>
-
-<div>
- <h1>This is a Heading</h1>
- 
-</div>
-
+    
 <!-- Trigger/Open The Modal -->
-<button id="myBtn">Open Modal</button>
+<button id="myBtn" onclick='openModal()'>Open Modal</button>
 
 <!-- The Modal -->
 <div id="myModal" class="modal">
@@ -25,6 +19,6 @@
     <p>Some text in the Modal..</p>
   </div>
 </div>
-
+<script src="script.js"></script>
 </body>
 </html>
