--- a/index.html
+++ b/index.html
@@ -15,13 +15,19 @@
   <div class="modal-content">
     <span class="close">&times;</span>
     <form>
-        <label for='name'>Title:</label><br>
+        <label for='title'>Title:</label><br>
         <input type="text" id='title' value='Title'><br><br>
-        <label for='name'>Author:</label><br>
+        <label for='author'>Author:</label><br>
         <input type="text" id='author' value='Author'><br><br>
-        <label for='name'>Number of pages:</label><br>
-        <input type="text" id='author' value='Number of pages'><br><br>
+        <label for='pageNumber'>Number of pages:</label><br>
+        <input type="text" id='pageNumber' value='Number of pages'><br><br>
+        <label for="read">Have you read this book?</label>
+        <input type="radio" id="yes" name='readCheck' value="yesRead">
+        <label for='yes'>Yes</label>
+        <input type="radio" id="no" name='readCheck' value="noRead">
+        <label for='no'>No</label><br><br>
         <input type="submit" value="Add Book">
+        
     </form>
   </div>
 </div>
