Added code to render to the addBook function

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <title>Project-Library</title>
 <meta name="viewport" content="width=device-width,initial-scale=1">
 <link rel="stylesheet" href="style.css">
-
+<header>Project: Library</header>
 <body>
     
 <button id="myBtn" onclick='openModal()'>+</button>
@@ -32,7 +32,7 @@
   </div>
 </div>
 <div id='libraryContainer'>
-    
+
 </div>
 <script src="script.js"></script>
 </body>
