--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     </form>
   </div>
 </div>
-<div id='libraryContainer'>
+<div id='Library-container'>
 
 </div>
 <script src="script.js"></script>
