--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <!-- Modal content -->
   <div class="modal-content">
     <span class="close">&times;</span>
-    <form>
+    <form id='form'>
         <label for='title'>Title:</label><br>
         <input type="text" id='title' value='Title'><br><br>
         <label for='author'>Author:</label><br>
