--- a/index.html
+++ b/index.html
@@ -17,19 +17,19 @@
 <!-- The Modal -->
 <div id="myModal" class="modal">
   <!-- Modal content -->
-  <div class="modal-content">
+  <div id="modalForm" class="modal-content">
     <span class="close">&times;</span>
     <form id='form'>
         <label for='title'>Title:</label><br>
-        <input type="text" id='title' value='Title'><br><br>
+        <input type="text" id='title' placeholder='Title'><br><br>
         <label for='author'>Author:</label><br>
-        <input type="text" id='author' value='Author'><br><br>
+        <input type="text" id='author' placeholder='Author'><br><br>
         <label for='pages'>Number of pages:</label><br>
-        <input type="text" id='pages' value='Number of pages'><br><br>
+        <input type="text" id='pages' placeholder='Number of pages'><br><br>
         <label for="read">Have you read this book?</label>
         <input type="checkbox" id="read" name='read' value="yes"><br><br>
         
-        <input type="submit" value="Add Book" onclick='addBookToLibrary()'>
+        <input type="submit" id='addBtn' value="Add Book" onclick='addBookToLibrary()'>
         
     </form>
   </div>
