Add firebase script to html

--- a/index.html
+++ b/index.html
@@ -41,5 +41,24 @@
 
 </div>
 <script src='script.js'></script>
+<script type="module">
+  // Import the functions you need from the SDKs you need
+  import { initializeApp } from "https://www.gstatic.com/firebasejs/9.6.5/firebase-app.js";
+  // TODO: Add SDKs for Firebase products that you want to use
+  // https://firebase.google.com/docs/web/setup#available-libraries
+
+  // Your web app's Firebase configuration
+  const firebaseConfig = {
+    apiKey: "AIzaSyBnIlno0ChOz_6vyZ5KB9a1jMo1SilMjfw",
+    authDomain: "library-137b9.firebaseapp.com",
+    projectId: "library-137b9",
+    storageBucket: "library-137b9.appspot.com",
+    messagingSenderId: "973151242245",
+    appId: "1:973151242245:web:43f46fe9fc7e21212ff46c"
+  };
+
+  // Initialize Firebase
+  const app = initializeApp(firebaseConfig);
+</script>
 </body>
 </html>
